<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@mipmap/latar">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       android:gravity="center_horizontal">
      <com.google.android.material.card.MaterialCardView
          android:layout_width="150dp"
          android:layout_height="150dp"
          android:id="@+id/imageView3"
          android:layout_marginTop="80dp"
          app:cardCornerRadius="150dp">

         <ImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scaleType="centerCrop"
             android:src="@mipmap/foto"/>

      </com.google.android.material.card.MaterialCardView>

      <TextView
          android:id="@+id/textView5"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp"
          android:text="@string/name"
          android:textStyle="bold"
          android:textSize="20dp"
          android:fontFamily="@font/shantell_shans"
          android:textColor="@color/white"/>

      <TextView
          android:id="@+id/textView6"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/nim"
          android:textSize="18dp"
          android:fontFamily="@font/tilt_neon"
          android:textColor="@color/white"/>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:gravity="center"
          android:weightSum="3"
          android:layout_marginTop="16dp">

         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:gravity="center"
             android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="12"
                android:textStyle="bold"
                android:textSize="24dp"
                android:fontFamily="@font/tilt_neon"
                android:textColor="@color/white"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repositories"
                android:textSize="18dp"
                android:fontFamily="@font/roboto_slab"
                android:textColor="@color/white"/>
         </LinearLayout>

         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:gravity="center"
             android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="354"
                android:textStyle="bold"
                android:textSize="24dp"
                android:fontFamily="@font/tilt_neon"
                android:textColor="@color/white"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/followers"
                android:textSize="18dp"
                android:fontFamily="@font/roboto_slab"
                android:textColor="@color/white"/>
         </LinearLayout>

         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:gravity="center"
             android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="378"
                android:textStyle="bold"
                android:textSize="24dp"
                android:fontFamily="@font/tilt_neon"
                android:textColor="@color/white"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/following"
                android:textSize="18dp"
                android:fontFamily="@font/roboto_slab"
                android:textColor="@color/white"/>
         </LinearLayout>

      </LinearLayout>

      <TextView
          android:id="@+id/textView10"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="24dp"
          android:text="About"
          android:textStyle="bold"
          android:textSize="20dp"
          android:layout_gravity="left"
          android:layout_marginStart="20dp"
          android:fontFamily="@font/tilt_neon"
          android:textColor="@color/white"/>

      <TextView
          android:id="@+id/textView11"
          android:layout_width="match_parent"
          android:layout_marginStart="20dp"
          android:layout_margin="20dp"
          android:layout_height="wrap_content"
          android:layout_marginTop="8dp"
          android:text="@string/lorem"
          android:textSize="16dp"
          android:fontFamily="@font/rubik"
          android:textColor="@color/white"/>
   </LinearLayout>

</ScrollView>